# milan

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-release.yml  pypi-release.yml
demos/: demo-app.py  forms.py  multi-window.py  youtube.py
doc/: mkdocs.yml
doc/docs/: index.md  usage.md
doc/docs/reference/: browser.md
examples/entrypoint/: .gitignore  Makefile  entrypoints.py
examples/pytest/: .gitignore  Makefile  pytest.ini  tox.ini
examples/pytest/tests/: conftest.py  test_youtube.py
examples/standalone-script/: Makefile  standalone-script.py
milan/: __init__.py  browser.py  cdp_browser.py  cdp_client.py  cdp_video_recorder.py  chromium.py  command_line.py  errors.py  event_router.py  executables.py  ffmpeg_video_recorder.py  firefox.py  json_rpc.py  lona.py  process.py  reverse_proxy.py  utils.py  video_recorder.py  webkit.py
milan/browser_extensions/: __init__.py
milan/browser_extensions/chromium/milan/: background.js  manifest.json
milan/cdp/: websocket_browser.py  websocket_client.py
milan/cli/: background_init.py  cli.py  entry_points.py  run.py
milan/contrib/: lona.py
milan/frontend/: commands.py  proxy.py  server.py  server2.py
milan/frontend/static/: address-bar.js  cursor.js  frontend.js  index.html  milan.css
milan/frontend/static/assets/fonts/google-material-design-icons/: README.txt
milan/frontend/static/background/: background.css  background.js  index.html
milan/frontend/static/test-application/: index.html  test-application.css  test-application.js
milan/utils/: background_loop.py  http.py  imports.py  json_rpc.py  media.py  misc.py  pass-fds.sh  process.py  reverse_proxy.py  stream.py  url.py  video.py
scripts/: chromium  pw-sniff-wrapper.sh  pw-sniff.py  run-browser.py  run-playwright.py  test-application.py  test-script.py
tests/: conftest.py  test_0001_test_suite.py  test_0002_form_inputs.py  test_0002_start_and_stop.py  test_0003_form_inputs.py  test_0003_video_capturing.py  test_0004_dom_api.py  test_0005_evaluate.py  test_0006_resizing.py  test_0102_screenshots.py  test_0102_video_capturing.py  test_0201_demos.py  test_0202_highlighting.py
