[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
version = "0.1.3"
name = "milan"
description = "Browser testing and capturing tool"

authors = [
  { name="Florian Scherf", email="mail@florianscherf.de" },
]

readme = "README.md"
license = { file="LICENSE.txt" }

requires-python = ">=3.8"

dependencies = [
  "playwright>=1.44,<1.46",
  "aiohttp~=3.9.0",
  "urllib3",
  "simple-logging-setup",
  "rlpython",
]


[project.optional-dependencies]
docker = [
  "tox==4.16.0"
]

dev = [
  "build",
  "twine",
  "tox",
  "simple-logging-setup",
  "debugpy",
  "mkdocs==1.6.0",
  "mkdocstrings[python]==0.25.1",
  "mkdocs-material==9.5.29",
]

test = [
  "coverage==7.6.0",
  "pytest==8.3.1",
  "pytest-timeout==2.3.1",
  "pytest-asyncio==0.23.8",
  "lona==1.16.2",
  "lona-picocss==0.4.3",
]


[tool.setuptools]
include-package-data = true

script-files = [
  "bin/milan",
]

[tool.setuptools.packages.find]
include = ["milan*"]

[tool.setuptools.package-data]
"milan.browser_extensions" = ["**"]
"milan.frontend.static" = ["**"]
"milan.utils" = ["**"]

[tool.setuptools.exclude-package-data]
"*" = [
  ".*",
  "~*",
  "*.swp",
  "*.pyc",
]
