[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
version = "0.1.4"
name = "milan"
description = "Browser testing and capturing tool"

authors = [
  { name="Florian Scherf", email="mail@florianscherf.de" },
]

readme = "README.md"
license = { file="LICENSE.txt" }

requires-python = ">=3.8"

dependencies = [
  "playwright>=1.44,<1.47",
  "aiohttp>=3.9,<3.11",
  "urllib3",
  "simple-logging-setup",
  "rlpython",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Capture",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: User Interfaces",
]


[project.optional-dependencies]
docker = [
  "tox==4.23.0"
]

dev = [
  "build",
  "twine",
  "tox",
  "simple-logging-setup",
  "debugpy",
  "mkdocs==1.6.1",
  "mkdocstrings[python]==0.26.1",
  "mkdocs-material==9.5.40",
]

test = [
  "coverage==7.6.1",
  "pytest==8.3.3",
  "pytest-timeout==2.3.1",
  "pytest-asyncio==0.24.0",
  "lona==1.16.2",
  "lona-picocss==0.4.3",
]


[tool.setuptools]
include-package-data = true

script-files = [
  "bin/milan",
]

[tool.setuptools.packages.find]
include = ["milan*"]

[tool.setuptools.package-data]
"milan.browser_extensions" = ["**"]
"milan.frontend.static" = ["**"]
"milan.utils" = ["**"]

[tool.setuptools.exclude-package-data]
"*" = [
  ".*",
  "~*",
  "*.swp",
  "*.pyc",
]
